2009-12-23	Hans Rakers <hans at react.nl>

		* Fixed ticket #383 (crash on ZEND_ADD_INTERFACE)
		* check_mtime can now be enabled/disabled through the web
		  interface as requested in ticket #32
		* Shortened some variable names
		* ZEND_JMP_SET support

2009-12-01	Hans Rakers <hans at react.nl>

		* Win32 compilation fixes (compiles in VC++ 2008)
		* Updated VC++ project file to VC++ 2008 format

2009-11-30	Hans Rakers <hans at react.nl>

		* Added a whole bunch of standard functions to
		  opt_result_is_numeric()
		* init allocated memblocks with memset instead of a for loop
		  in reassign_registers()
		* Fix in build_cfg for PHP 5.3 UCLASS znodes. These are
		  handled differently in 5.3 due to namespaces.
		* Some tweaks and additions to ea_dasm.c
		* Some quick and dirty tweaks to dasm.php to sync looks with
		  control.php
		* Fixed ordering of table columns in control.php. This solves
		  ticket #364

2009-11-25	Hans Rakers <hans at react.nl>

		* Optimizer and general PHP 5.3 fixes
		* Some cleanups

2009-11-11	Bart Vanbrabant <bart at vanbrabant.eu>

		* Add the optimizer back

2009-11-11	Hans Rakers <hans at react.nl>

		* PHP 5.3 ZEND_JMP_SET support. Fixes ticket #371
		* open_basedir bypass fixed. Fixes ticket #104
		* Fix for ticket #194
		* Stripped old opcodes from opcode.c and added new ones

2009-07-14	Bart Vanbrabant <bart at vanbrabant.eu>
	
		* Fix two PHP 5.3 bugs
		* Remove the optimizer
		* Remove the user cache functions

2009-05-06	Bart Vanbrabant <bart at vanbrabant.eu>

		* Remove code that is only needed for php < 5
		* Rebase to code to minimal PHP 5.1
		* Update support for PHP 5.3
		* Remove have_sched_yield check in config.m4. This is not used
		  anywhere and and causes some compilation errors.
		* Apply patch from ticket [324]

2008-06-20  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * First stab at php 5.3 support. Only fixes the script cache.
          phpMyAdmin seems to work with these changes.