@@ -583,6 +583,9 @@ static ea_op_array *store_op_array(char **at, zend_op_array * from TSRMLS_DC)
                 store_zval(at, &opline->op2.u.constant TSRMLS_CC);
             }
             switch (opline->opcode) {
+#ifdef ZEND_GOTO
+            case ZEND_GOTO:
+#endif
             case ZEND_JMP:
                 opline->op1.u.jmp_addr = to->opcodes + (opline->op1.u.jmp_addr - from->opcodes);
                 break;
@@ -590,7 +593,7 @@ static ea_op_array *store_op_array(char **at, zend_op_array * from TSRMLS_DC)
             case ZEND_JMPNZ:
             case ZEND_JMPZ_EX:
             case ZEND_JMPNZ_EX:
-#ifdef ZEND_ENGINE_2_3
+#ifdef ZEND_JMP_SET
             case ZEND_JMP_SET:
 #endif
                 opline->op2.u.jmp_addr = to->opcodes + (opline->op2.u.jmp_addr - from->opcodes);
